Changed the removeLast()